modules/cli/src/test/resources/good/syntax/inlinedunfolding/grecursion/Test02d.scr
module good.syntax.inlinedunfolding.grecursion.Test02d;


global protocol Proto1(role A, role B)
{
	rec X
	{
		1() from A to B;
		choice at A
		{
			continue X;
		}
		or
		{
			rec Y  // Testing nested InlinedProtocolUnfolding case
			{
				2() from A to B;
				continue X;
			}
		}
	}
}

