modules/cli/src/test/resources/bad/liveness/roleprog/Test03a.scr
module bad.liveness.roleprog.Test03a;


global protocol Proto1(role A, role B, role C)
{
	choice at A
	{
		rec X
		{
			choice at A
			{
				1() from A to B;
				continue X;
			}
		}
	}
	or
	{
		2() from A to B;
		2() from B to C;  // Role progress violation for C
	}
}
